--- a/server/WEB-INF/web.xml
+++ b/server/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>bz.epi.joa.gcom_w1</param-value>
+            <param-value>jp.jaxa.web.gcom_w1</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
